fixed overlapping section

--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@
     box-sizing: border-box;
 }
 
+body{
+    font-size: var(--fz-body);
+    font-family: var(--ff-body);
+    place-items: center;
+    overflow-x: hidden;
+}
+
 input, button, textarea, select {
   font: inherit;
 }
@@ -38,13 +45,10 @@ button{
 .container{
     padding: 5rem 3rem;
     width: 100vw;
+    overflow-x: hidden;
 }
 
-body{
-    font-size: var(--fz-body);
-    font-family: var(--ff-body);
-    place-items: center;
-}
+
 
 p{
     font-size: 1rem;
@@ -157,6 +161,7 @@ nav button:hover{
 }
 
 .section-z{
+    background-color: white;
     padding-block: 2.5rem;
     padding-inline: 8rem;
     z-index: 2;
